<resources>
    <string name="app_name">pos-system</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_order">Order</string>
    <string name="menu_store">Store</string>
    <string name="menu_financial_management">Financial Management</string>
    <string name="menu_logout">Logout</string>

    <string name="Order_Records">Order Records</string>
    <string name="All_Orders">All Orders</string>
    <string name="Pending">Pending</string>
    <string name="Completed">Completed</string>
    <string name="Cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="Entries">Showing 1 to 10 of 100 entries</string>
    <string name="clothing1">Clothing1</string>
    <string name="clothing3">Clothing3</string>
    <string name="clothing6">Clothing6</string>

    <string name="cart">Cart</string>
    <string name="description">DESCRIPTION</string>
    <string name="rate">RATE</string>
    <string name="quantity">QUANTITY</string>
    <string name="amount">AMOUNT</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax (0%)</string>
    <string name="total">Total</string>
    <string name="barcodebtn">Scan Barcode</string>

    <string name="barcode_btn">Scan Barcode</string>

</resources>
