<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sale" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_financial_management" />
    </group>
</menu>