<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.endura.pos_system.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sale"
        android:name="com.endura.pos_system.ui.sale.SaleFragmentTest"
        android:label="@string/menu_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.endura.pos_system.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_store"
        android:name="com.endura.pos_system.ui.store.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/nav_finance"
        android:name="com.endura.pos_system.ui.finance.FinanceFragment"
        android:label="@string/menu_financial_management"
        tools:layout="@layout/fragment_finance" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.endura.pos_system."
        android:label="@string/menu_financial_management"
        tools:layout="@layout/fragment_finance" />

</navigation>