<?xml version="1.0" encoding="utf-8"?> <androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:content=".ui.order.OrderFragment">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:translationX="707dp"
    android:translationY="111dp"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/Order_Records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Order_Records"
        android:textColor="#061624"
        android:textSize="22sp"
        android:textStyle="bold"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:translationY="190dp"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/All_Orders"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textSize="16sp"
        android:textColor="#80061624"
        android:text="@string/All_Orders"
        android:translationX="200dp"/>

    <TextView
        android:id="@+id/Completed"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/Completed"
        android:textColor="#80061624"
        android:textSize="16sp"
        android:translationX="220dp"/>

    <TextView
        android:id="@+id/Pending"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textSize="16sp"
        android:textColor="#80061624"
        android:text="@string/Pending"
        android:translationX="240dp"/>

    <TextView
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textSize="16sp"
        android:textColor="#80061624"
        android:text="@string/Cancel"
        android:translationX="260dp"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationY="220dp"
    android:orientation="horizontal"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/Number"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="#"
        android:translationX="200dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/OrderID"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="OrderID"
        android:translationX="250dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/ProductName"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Product Name"
        android:translationX="320dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Address"
        android:translationX="530dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Date"
        android:translationX="750dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Price"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Price"
        android:translationX="800dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="Status"
        android:translationX="900dp"
        tools:ignore="HardcodedText" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:translationX="1149dp"
    android:translationY="140dp"
    tools:ignore="MissingConstraints">

    <Button
        android:id="@+id/monthYearPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:translationY="600dp"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/Entries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/Entries"
        android:translationX="200dp"/>

    <TextView
        android:id="@+id/Previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/Previous"
        android:translationX="708dp"/>

    <Button
        android:id="@+id/no_1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textSize="14sp"
        android:text="no_1"
        android:translationX="720dp"/>

    <Button
        android:id="@+id/no_2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textSize="14sp"
        android:text="no_2"
        android:translationX="725dp"/>

    <Button
        android:id="@+id/no_3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textSize="14sp"
        android:text="no_3"
        android:translationX="730dp"/>

    <Button
        android:id="@+id/no_4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textSize="14sp"
        android:text="no_4"
        android:translationX="735dp"/>

    <Button
        android:id="@+id/no_5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textSize="14sp"
        android:text="no_5"
        android:translationX="740dp"/>

    <Button
        android:id="@+id/no_6"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textSize="14sp"
        android:text="no_6"
        android:translationX="745dp"/>

    <TextView
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/Next"
        android:translationX="757dp"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>