<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/clothing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1072dp"
        android:layout_marginLeft="1072dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/clothing1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1072dp"
        android:layout_marginLeft="1072dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/clothing3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clothing1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1072dp"
        android:layout_marginLeft="1072dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/clothing6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clothing3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/clothing6"
        app:layout_constraintStart_toEndOf="@+id/clothing6"
        app:layout_constraintTop_toBottomOf="@+id/clothing4"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/clothing6"
        app:layout_constraintStart_toEndOf="@+id/clothing7"
        app:layout_constraintTop_toBottomOf="@+id/clothing5"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/clothing3"
        app:layout_constraintTop_toBottomOf="@+id/clothing2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toEndOf="@+id/clothing1"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toEndOf="@+id/clothing2"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/clothing5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/clothing4"
        app:layout_constraintTop_toBottomOf="@+id/clothing"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/mensButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1072dp"
        android:layout_marginLeft="1072dp"
        android:layout_marginTop="200dp"
        android:text="Men"
        app:backgroundTint="#2986FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/womensButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="200dp"
        android:text="Women"
        app:backgroundTint="#D6B6D6"
        app:layout_constraintStart_toEndOf="@+id/mensButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/othersButton"
        android:layout_width="97dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="200dp"
        android:text="Others"
        app:backgroundTint="#24B3EA"
        app:layout_constraintStart_toEndOf="@+id/womensButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/miscButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="200dp"
        android:text="MISC"
        app:backgroundTint="#8B8D9E"
        app:layout_constraintStart_toEndOf="@+id/othersButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="200dp"
        android:text="NEW"
        app:layout_constraintStart_toEndOf="@+id/miscButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="1070dp"
        android:layout_height="1166dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.core.widget.NestedScrollView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="75dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>